# AIPurpixBrickLab

./: .gitmodules  README.md  package-lock.json
pictobrick/: package-lock.json  package.json
pictobrick/app/: page.tsx
pictobrick/components/: PictobrickUploadTemplate.tsx
pictobrickWebApp/: .dockerignore  .gitignore  compose.yaml  main.py  pyproject.toml
pictobrickWebApp/app/: page.tsx
pictobrickWebApp/app/applehome/: page.tsx
pictobrickWebApp/app/playfulhome/: page.tsx
pictobrickWebApp/app/pro/: page.tsx
pictobrickWebApp/frontend/: .dockerignore  .env.example  .gitignore  Dockerfile.frontend  README.md  next.config.ts  package-lock.json
pictobrickWebApp/ml/: .env.example  .gitignore  main.py  pyproject.toml
pictobrickWebApp/ml/src/ptb_ml/brickification/: __init__.py  colors.py  engine.py  models.py  settings.py
pictobrickWebApp/ml/src/ptb_ml/instructions/: __init__.py  engine.py  glb_builder.py  models.py  settings.py
pictobrickWebApp/ml/src/ptb_ml/pipeline/: __init__.py  run.py
pictobrickWebApp/ml/src/ptb_ml/preprocess/: __init__.py  dedupe.py  engine.py  ingest.py  io.py  manifest.py  masking.py  models.py  quality.py  settings.py  video.py
pictobrickWebApp/ml/src/ptb_ml/priors/: __init__.py  dsine_loader.py  engine.py  models.py  settings.py
pictobrickWebApp/ml/src/ptb_ml/sfm/: __init__.py  colmap_runner.py  engine.py  models.py  settings.py
pictobrickWebApp/ml/src/ptb_ml/sfm_qc/: __init__.py  analyzer.py  engine.py  models.py  settings.py
pictobrickWebApp/ml/src/ptb_ml/shape_completion/: engine.py  models.py  pose_reader.py  settings.py
pictobrickWebApp/ml/src/ptb_ml/voxelization/: __init__.py  engine.py  models.py  settings.py
pictobrickWebApp/ml/test/: test_full.py  test_preproc_to_vid.py
pictobrickWebApp/ml/tmp/ptb_jobs/job1/metadata/: manifest.json  quality_report.json
pictobrickWebApp/ml/tmp/ptb_jobs/job2/metadata/: manifest.json  quality_report.json
pictobrickWebApp/ml/tmp/ptb_jobs/test123/metadata/: manifest.json
(+10 files in other folders)
